# quant-factor-lab

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  portfolio-sync.yml
.streamlit/: config.toml
app/: streamlit_app.py  streamlit_us.py
configs/: ashare_demo.yaml  us_demo.yaml
data/sample/: panel.csv  panel_us.csv
lessons/: 00_roadmap.md  01_what_is_a_factor.md  02_selecting_factors.md  03_single_factor_test.md  04_us_module.md
scripts/: 01_build_demo_data.py  02_select_and_test_factors.py  03_multi_factor_backtest.py  us_01_build_demo_data.py  us_02_select_and_test_factors.py  us_03_multi_factor_backtest.py
src/quantlab/: __init__.py
src/quantlab/backtest/: __init__.py  engine.py  metrics.py
src/quantlab/data/: __init__.py  loader.py  synthetic_ashare.py  synthetic_us.py
src/quantlab/factors/: __init__.py  catalog.py  compute.py
src/quantlab/portfolio/: __init__.py  combine.py
src/quantlab/research/: __init__.py  correlation.py  ic.py  layers.py
tests/: test_quantlab.py
