[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantlab"
version = "0.1.0"
description = "Quant Factor Lab — A-share first factor research bench"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "plotly>=5.18",
  "streamlit>=1.32",
  "pyyaml>=6.0",
  "statsmodels>=0.14",
  "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["src"]
